--- a/Article/Article.less
+++ b/Article/Article.less
@@ -38,11 +38,18 @@
     cursor: pointer;
     transform: translate(-50%);
     background-color: white;
+
+    
   }
 }
 
+.hide-btn{
+  display: none;
+}
+
 .article-open {
-  height: 400px;
+  height: 550px;
+  // min-height: 100vh;
 }
 
 
